--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Pawan</h1>
-						   					<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
+						   					<h2>Software Engineer from Bangalore</h2>
 												<p><a href="pawanbathe_cv.pdf"><class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
@@ -117,9 +117,9 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>I am <br>a Designer</h1>
-												<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
-												<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
+						   					<h1>I am <br>a Software Developer</h1>
+												<h2>Working on Software Automation and Test Frameworks Development</h2>
+												<p><a href="pawanbathe_cv.pdf"class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -139,7 +139,7 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Pawan Bathe</strong> I working as Software Enigeer at Qualcomm, Bangalore, I am enthusiastic python developer</p>
+										<p><strong>Hi I'm Pawan Bathe</strong> I working as Software Enigeer at Qualcomm, Bangalore, I am enthusiastic python developer.</p>
 										<p>When I am not writing a code, I am either reading or watching TV series. </p>
 									</div>
 								</div>
@@ -202,7 +202,7 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 								</span>
 								<div class="desc">
 									<h3>Innovative Ideas</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Ideas drive Innovations</p>
 								</div>
 							</div>
 						</div>
@@ -213,7 +213,7 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 								</span>
 								<div class="desc">
 									<h3>Software</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Software Development</p>
 								</div>
 							</div>
 						</div>
@@ -224,7 +224,7 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 								</span>
 								<div class="desc">
 									<h3>Application</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Windows and Android Application Development</p>
 								</div>
 							</div>
 						</div>
@@ -234,19 +234,8 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 									<i class="icon-layers2"></i>
 								</span>
 								<div class="desc">
-									<h3>Graphic Design</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-5">
-								<span class="icon">
-									<i class="icon-data"></i>
-								</span>
-								<div class="desc">
-									<h3>Software</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Test Automation</h3>
+									<p>Test Automation and Test Tools Development</p>
 								</div>
 							</div>
 						</div>
@@ -256,8 +245,8 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Application</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Machine Learning</h3>
+									<p>Machine Learning Enthusiast</p>
 								</div>
 							</div>
 						</div>
@@ -272,20 +261,20 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="309" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="300" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Cups of coffee</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="356" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="15" data-speed="5000" data-refresh-interval="5"></span>
 							<span class="colorlib-counter-label">Projects</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="30" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Clients</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="3" data-speed="5000" data-refresh-interval="5"></span>
+							<span class="colorlib-counter-label">Organisations</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Partners</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="65" data-speed="5000" data-refresh-interval="5"></span>
+							<span class="colorlib-counter-label">Books</span>
 						</div>
 					</div>
 				</div>
@@ -388,7 +377,7 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Master of Technology (M.Tech)
+									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Master of Technology (M.Tech) 2018-2021
 									            </a>
 									        </h4>
 									    </div>
@@ -396,10 +385,10 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-6">
-										      			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+										      			<p>Pursuing Masters in Computer Science (UoP) with specialization in Information Security from <strong>Indian Institute of Technology, Madras.</strong></p>
 										      		</div>
 										      		<div class="col-md-6">
-										      			<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+										      			<p>	It is user oriented program designed by IIT Madras, considering industry requiremnt , it sponsored by my organization Qualcomm.</p>
 										      		</div>
 										      	</div>
 									         </div>
@@ -408,16 +397,18 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor of Engineering (Computer Science)
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor of Engineering (Computer Science) 2010-2013
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									            <p> Completed Bachelors Degree In Computer Science and Engineering from <strong> Government College of Engineering, Aurangabad</strong>  with <strong>8.5 CGPA</strong></p>
 													<ul>
-														<li>Separated they live in Bookmarksgrove right</li>
-														<li>Separated they live in Bookmarksgrove right</li>
+														<li>Algorithm and Design</li>
+														<li>Computer Organisation</li>
+														<li>Cryptography</li>
+														<li>Design of Linux OS</li>
 													</ul>
 									        </div>
 									    </div>
@@ -425,26 +416,26 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingThree">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Diploma in Computer Engineering
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Diploma in Computer Engineering 2007-2010
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>	
+									            <p>Completed polytechinc <strong>Diploma in Computer Engineering</strong>, from Government Polytechinc, Khamgaon with <strong>87.20%</strong></p>	
 									        </div>
 									    </div>
 									</div>
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingFive">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">Secondary School Education
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">Secondary School Education - March  2007
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>	
+									            <p>Completed Secondary School from <strong> Shree Shivaji High School, Nandura</strong> with <strong>87.23%</strong></p>	
 									        </div>
 									    </div>
 									</div>
