--- a/index.html
+++ b/index.html
@@ -552,6 +552,7 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 							<h2 class="colorlib-heading animate-box">Recent Work</h2>
 						</div>
 					</div>
+					<!--
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
 							<p class="work-menu"><span><a href="#" class="active">Graphic Design</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span> <span><a href="#">Apps</a></span></p>
@@ -649,13 +650,14 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 							</div>
 						</div>
 					</div>
+					-->
 					<div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
 						</div>
 					</div>
 				</div>
-			</section>
+			</section-->
 
 			<section class="colorlib-blog" data-section="blog">
 				<div class="colorlib-narrow-content">
@@ -665,6 +667,7 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 							<h2 class="colorlib-heading">Recent Blog</h2>
 						</div>
 					</div>
+					<!--
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
@@ -697,6 +700,7 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 							</div>
 						</div>
 					</div>
+					-->
 					<div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
