--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 								</div>
 							</div>
 						</div>
-						<div class="col-md-7 col-md-push-1">
+						<!--div class="col-md-7 col-md-push-1">
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
 									<form action="">
@@ -769,7 +769,7 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 								</div>
 								
 							</div>
-						</div>
+						</div-->
 					</div>
 				</div>
 			</section>
