--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Jackson Template</title>
+	<title>Pawan Bathe - Software Engineer in Bangalore</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -48,7 +48,6 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
 	</head>
 	<body>
 	<div id="colorlib-page">
@@ -174,8 +173,8 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>I am happy to know you <br>that several projects done sucessfully!</h2>
-										<a href="#" class="btn-hire">Hire me</a>
+										<h2>Thanks for stopping by <br> my website!</h2>
+										<a href="mailto:bathepawan@gmail.com?Subject=Hello%20Pawan!" target="_top"" class="btn-hire">Contact me</a>
 									</div>
 								</div>
 							</div>
@@ -290,7 +289,11 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+							<p>I am currently working on Test Automation using Python, but I got opportunites to get my hand dirty with several technologies during my career and academics so far.
+							I have worked on C,C++,Java to name few programmaling languages other than Python.
+							I have equally good exposure to SQL, HTML and CSS.
+							I have beginners knowledge on Android and Windows Application Developmenet. 
+							</p>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
@@ -303,6 +306,28 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 								</div>
 							</div>
 						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+								<div class="progress-wrap">
+									<h3>Test Automation</h3>
+									<div class="progress">
+										 <div class="progress-bar color-6" role="progressbar" aria-valuenow="75"
+										  aria-valuemin="0" aria-valuemax="100" style="width:75%">
+										<span>75%</span>
+										  </div>
+									</div>
+								</div>
+						</div>	
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+								<div class="progress-wrap">
+									<h3>SQL</h3>
+									<div class="progress">
+										 <div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
+										  aria-valuemin="0" aria-valuemax="100" style="width:50%">
+										<span>50%</span>
+										  </div>
+									</div>
+								</div>
+						</div>	
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
 								<h3>C Programming</h3>
@@ -337,26 +362,48 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="progress-wrap">
-								<h3>SQL</h3>
-								<div class="progress">
-								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
-								    <span>50%</span>
-								  	</div>
+								<div class="progress-wrap">
+									<h3>Android Application Developmenet</h3>
+									<div class="progress">
+										 <div class="progress-bar color-6" role="progressbar" aria-valuenow="40"
+										  aria-valuemin="0" aria-valuemax="100" style="width:40%">
+										<span>40%</span>
+										  </div>
+									</div>
 								</div>
-							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="progress-wrap">
-								<h3>Test Automation</h3>
-								<div class="progress">
-								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="75"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
-								    <span>75%</span>
-								  	</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+								<div class="progress-wrap">
+									<h3>Design Patterns</h3>
+									<div class="progress">
+										 <div class="progress-bar color-5" role="progressbar" aria-valuenow="40"
+										  aria-valuemin="0" aria-valuemax="100" style="width:40%">
+										<span>40%</span>
+										  </div>
+									</div>
 								</div>
-							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+								<div class="progress-wrap">
+									<h3>Machine Learning</h3>
+									<div class="progress">
+										 <div class="progress-bar color-2" role="progressbar" aria-valuenow="40"
+										  aria-valuemin="0" aria-valuemax="100" style="width:40%">
+										<span>40%</span>
+										</div>
+									</div>
+								</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+								<div class="progress-wrap">
+									<h3>Information Security</h3>
+									<div class="progress">
+										 <div class="progress-bar color-1" role="progressbar" aria-valuenow="40"
+										  aria-valuemin="0" aria-valuemax="100" style="width:40%">
+										<span>40%</span>
+										</div>
+									</div>
+								</div>
 						</div>
 					</div>
 				</div>
@@ -377,11 +424,11 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Master of Technology (M.Tech) 2018-2021
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Master of Technology (M.Tech) 2018-2021
 									            </a>
 									        </h4>
 									    </div>
-									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+									    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-6">
@@ -422,7 +469,9 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 									    </div>
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
-									            <p>Completed polytechinc <strong>Diploma in Computer Engineering</strong>, from Government Polytechinc, Khamgaon with <strong>87.20%</strong></p>	
+												<p>
+													Completed polytechinc <strong>Diploma in Computer Engineering</strong>, from Government Polytechinc, Khamgaon with <strong>87.20%</strong>
+												</p>	
 									        </div>
 									    </div>
 									</div>
@@ -552,105 +601,78 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 							<h2 class="colorlib-heading animate-box">Recent Work</h2>
 						</div>
 					</div>
-					<!--
+					
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
-							<p class="work-menu"><span><a href="#" class="active">Graphic Design</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span> <span><a href="#">Apps</a></span></p>
+							<p class="work-menu">
+								<span id="w2"><a href="#open_source_row" class="active">Open Source Contributions</a></span>
+								<span id="w1"><a href="#android_apps_row">Android Applications</a></span> 
+								<span id="w3"><a href="#others_row" >Other</a></span>
+							</p>
 						</div>
 					</div>
-					<div class="row">
+					<!--Open Source-->
+					<div id="open_source_row" class="row">
+							<div id="work_armc" class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+								<div class="project" style="background-image: url(images/arm.png);">
+									<div class="desc">
+										<div class="con">
+											<h3><a href="https://github.com/ARM-software/workload-automation/pull/45" target="_blank">Contribution ARM's workload-automation framework</a></h3>
+											<span></span>
+											<!--p class="icon">
+												<span><a href="#"><i class="icon-share3"></i></a></span>
+												<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+												<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											</p-->
+										</div>
+									</div>
+								</div>
+							</div>
+					</div>
+					<!--Android Apps-->
+					<div id="android_apps_row" class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-1.jpg);">
+							<div class="project" style="background-image: url(images/hst.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 01</a></h3>
-										<span>Website</span>
-										<p class="icon">
+										<h3><a href="https://play.google.com/store/apps/details?id=com.pawanbathe.hardwaresanitytester" target="_blank">Hardware Sanity Tester</a></h3>
+										<span><a href="#">Website</a></span>
+										<h6>    <p>
+												<br>
+												<br>
+												Hardware Sanity Tester Reports Information About Your Device. <br>
+												</p>
+										</h6>
+										<!--p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
 											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-2.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="work.html">Work 02</a></h3>
-										<span>Animation</span>
-										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/img-3.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="work.html">Work 03</a></h3>
-										<span>Illustration</span>
-										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-							<div class="project" style="background-image: url(images/img-4.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="work.html">Work 04</a></h3>
-										<span>Application</span>
-										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-5.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="work.html">Work 05</a></h3>
-										<span>Graphic, Logo</span>
-										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-6.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="work.html">Work 06</a></h3>
-										<span>Web Design</span>
-										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
-										</p>
+										</p-->
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					-->
+					<!--Others-->
+					<div id="others_row" class="row">
+							<div id="work_armc" class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+								<div class="project" style="background-image: url(images/android.jpg);">
+									<div class="desc">
+										<div class="con">
+											<h3><a href="https://github.com/bathepawan/AndroidNativeScroll" target="_blank">Android Native Scroll Scripts</a></h3>
+											<span></span>
+											<!--p class="icon">
+												<span><a href="#"><i class="icon-share3"></i></a></span>
+												<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+												<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											</p-->
+										</div>
+									</div>
+								</div>
+							</div>
+					</div>
+
+
 					<div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
