--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="images/favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -138,7 +138,7 @@ Copyright &copy; Pawan Bathe <script>document.write(new Date().getFullYear());</
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Pawan Bathe</strong> I working as Software Enigeer at Qualcomm, Bangalore, I am enthusiastic python developer.</p>
+										<p><strong>Hi I'm Pawan Bathe</strong> I am working as Software Enigeer at Qualcomm, Bangalore, I am enthusiastic python developer.</p>
 										<p>When I am not writing a code, I am either reading or watching TV series. </p>
 									</div>
 								</div>
